--- a/index.html
+++ b/index.html
@@ -122,7 +122,6 @@
       font-family: inherit;
     }
 
-    /* Подсказка ПОД полем ID */
     .id-hint {
       font-size: 14px;
       color: #aaa;
@@ -170,7 +169,6 @@
       font-family: inherit;
     }
 
-    /* Кнопка эмодзи */
     .emoji-toggle {
       position: absolute;
       right: 12px;
@@ -188,7 +186,6 @@
       z-index: 5;
     }
 
-    /* Панель эмодзи — теперь над полем */
     .emoji-panel {
       position: absolute;
       background: white;
@@ -224,7 +221,6 @@
       background: #f0f0f0;
     }
 
-    /* Скроллбар панели эмодзи */
     .emoji-panel::-webkit-scrollbar {
       width: 6px;
     }
@@ -239,7 +235,7 @@
 
     .gifts-container {
       position: fixed;
-      bottom: 20px;
+      bottom: 140px;
       right: 20px;
       width: 70%;
       max-width: 400px;
@@ -324,8 +320,8 @@
     }
 
     @media (max-width: 600px) {
-      .gifts-container, .create-your-link {
-        bottom: 10px;
+      .gifts-container {
+        bottom: 120px;
         right: 10px;
         left: 10px;
         width: calc(100% - 20px);
@@ -345,6 +341,53 @@
   </style>
 </head>
 <body>
+
+  <!-- SVG-бэкграунд со снеговиками -->
+  <div style="position:fixed;bottom:0;left:0;width:100%;height:120px;pointer-events:none;z-index:-1;overflow:hidden;">
+    <svg width="100%" height="100%" viewBox="0 0 1200 120" xmlns="http://www.w3.org/2000/svg">
+      <defs>
+        <g id="snowman-pair">
+          <!-- Снеговик 1 -->
+          <circle cx="100" cy="70" r="15" fill="white" />
+          <circle cx="100" cy="45" r="12" fill="white" />
+          <circle cx="100" cy="25" r="10" fill="white" />
+          <circle cx="95" cy="22" r="1.5" fill="#333" />
+          <circle cx="105" cy="22" r="1.5" fill="#333" />
+          <polygon points="100,25 100,30 106,27" fill="orange" />
+          <rect x="85" y="40" width="30" height="6" fill="#e74c3c" rx="2" />
+          <rect x="110" y="40" width="6" height="25" fill="#e74c3c" />
+          <rect x="92" y="10" width="16" height="6" fill="#333" />
+          <rect x="85" y="12" width="30" height="3" fill="#333" />
+          <!-- Снеговик 2 -->
+          <circle cx="200" cy="70" r="15" fill="white" />
+          <circle cx="200" cy="45" r="12" fill="white" />
+          <circle cx="200" cy="25" r="10" fill="white" />
+          <circle cx="195" cy="22" r="1.5" fill="#333" />
+          <circle cx="205" cy="22" r="1.5" fill="#333" />
+          <polygon points="200,25 200,30 206,27" fill="orange" />
+          <rect x="185" y="40" width="30" height="6" fill="#3498db" rx="2" />
+          <rect x="210" y="40" width="6" height="25" fill="#3498db" />
+          <circle cx="200" cy="10" r="4" fill="#333" />
+          <!-- Снежки -->
+          <circle cx="130" cy="50" r="5" fill="white" opacity="0.9">
+            <animate attributeName="cy" values="50;30;10" dur="2s" repeatCount="indefinite" />
+            <animate attributeName="opacity" values="0.9;0.6;0" dur="2s" repeatCount="indefinite" />
+          </circle>
+          <circle cx="180" cy="50" r="5" fill="white" opacity="0.9">
+            <animate attributeName="cy" values="50;30;10" dur="2.2s" repeatCount="indefinite" begin="0.5s" />
+            <animate attributeName="opacity" values="0.9;0.6;0" dur="2.2s" repeatCount="indefinite" begin="0.5s" />
+          </circle>
+        </g>
+      </defs>
+      <use href="#snowman-pair" x="0" y="0">
+        <animate attributeName="x" from="-300" to="1200" dur="25s" repeatCount="indefinite" />
+      </use>
+      <use href="#snowman-pair" x="0" y="0">
+        <animate attributeName="x" from="-600" to="900" dur="30s" repeatCount="indefinite" begin="5s" />
+      </use>
+    </svg>
+  </div>
+
   <div class="lang-switcher">
     <button class="lang-btn active" data-lang="ru">RU</button>
     <button class="lang-btn" data-lang="en">EN</button>
@@ -355,7 +398,6 @@
   </div>
 
 <script>
-  // === ВСЁ ОСТАЛЬНОЕ БЕЗ ИЗМЕНЕНИЙ ===
   const translations = {
     ru: {
       title: 'Рождественский носок',
@@ -474,48 +516,6 @@
       snowflake.style.animationDuration = `${duration}s`;
       snowflake.style.animationDelay = `${delay}s`;
       snowContainer.appendChild(snowflake);
-    }
-  }
-
-  function createSnowmenScene() {
-    const scene = document.getElementById('snowmenScene');
-    if (!scene) return; // Защита от ошибки
-
-    const groupsCount = 3;
-    for (let i = 0; i < groupsCount; i++) {
-      const group = document.createElement('div');
-      group.className = 'snowman-group';
-      group.style.left = `${-30 - i * 100}%`;
-      group.style.animationDuration = `${20 + i * 8}s`;
-      group.style.animationDelay = `${i * 5}s`;
-
-      for (let j = 0; j < 2; j++) {
-        const snowman = document.createElement('div');
-        snowman.className = 'snowman';
-        snowman.innerHTML = `
-          <svg width="40" height="60" viewBox="0 0 40 60">
-            <circle cx="20" cy="45" r="10" fill="white" />
-            <circle cx="20" cy="30" r="8" fill="white" />
-            <circle cx="20" cy="18" r="6" fill="white" />
-            <circle cx="18" cy="16" r="1" fill="#333" />
-            <circle cx="22" cy="16" r="1" fill="#333" />
-            <polygon points="20,18 20,22 24,20" fill="orange" />
-            <rect x="12" y="26" width="16" height="4" fill="#e74c3c" rx="2" />
-            <rect x="12" y="26" width="4" height="12" fill="#e74c3c" />
-            <rect x="14" y="8" width="12" height="4" fill="#333" />
-            <rect x="10" y="10" width="20" height="2" fill="#333" />
-          </svg>
-        `;
-        group.appendChild(snowman);
-      }
-
-      const snowball = document.createElement('div');
-      snowball.className = 'snowball';
-      snowball.style.left = '25px';
-      snowball.style.animationDelay = `${0.5 + i}s`;
-      group.appendChild(snowball);
-
-      scene.appendChild(group);
     }
   }
 
@@ -838,10 +838,9 @@
     if (gifts) gifts.remove();
   });
 
-  // === ГЛАВНОЕ: ЗАПУСК ПОСЛЕ ЗАГРУЗКИ DOM ===
+  // === ЗАПУСК ===
   document.addEventListener('DOMContentLoaded', async () => {
     createSnowflakes();
-    createSnowmenScene();
 
     const path = window.location.pathname;
     const id = path === '/' ? null : path.substring(1);
@@ -852,7 +851,6 @@
     }
   });
 </script>
+
 </body>
 </html>
-
-
